--- a/views/index/welcome.handlebars
+++ b/views/index/welcome.handlebars
@@ -2,4 +2,6 @@
 
 <p>Welcome you all to story-book.io</p>
 <p>Here you can show your story to world.</p>
-<a class="red darken-1"><i class="fa fa-google left"></i>Login with Google</a>
+<a href="/auth/google" class="red darken-1">
+    <i class="fa fa-google left"></i>Login with Google
+</a>
