--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -12,7 +12,9 @@
     <title>StoryBooks</title>
 </head>
 <body>
-    
+    <div class="container">
+        {{{body}}}
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
