--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -12,9 +12,12 @@
     <title>StoryBooks</title>
 </head>
 <body>
+    {{> _header}}
+    <main>
     <div class="container">
         {{{body}}}
     </div>
+    </main>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
