--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -23,5 +23,10 @@
             crossorigin="anonymous"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+    <script>
+        $(document).ready(() => {
+            $('.button-collapse').sideNav();
+        });
+    </script>
 </body>
 </html>
