--- a/views/stories/index.handlebars
+++ b/views/stories/index.handlebars
@@ -5,8 +5,12 @@
             <div class="card">
                 <div class="card-content center-align">
                     <h5>{{title}}</h5>
-                    <p class="story-text">{{{body}}}</p>
+                    <p class="story-text">{{body}}</p>
                     <br>
+                    <div class="chip">
+                        <img src="{{user.image}}">
+                        {{user.firstName}} {{user.lastName}}
+                    </div>
                 </div>
             </div>
         </div>
