--- a/views/stories/edit.handlebars
+++ b/views/stories/edit.handlebars
@@ -1,7 +1,8 @@
 <h2>Edit Story</h2>
 
 <div class="row">
-    <form action="/stories" method="POST" class="col s12">
+    <form action="/stories/{{story.id}}?_method=PUT" method="POST" class="col s12">
+        <input type="hidden" name="_method" value="PUT">
         <div class="row">
             <div class="input-field">
                 <input type="text" name="title" value="{{story.title}}" />
