--- a/views/index/dashboard.handlebars
+++ b/views/index/dashboard.handlebars
@@ -22,7 +22,8 @@
                             <i class="fa fa-pencil"></i>Edit
                         </a>
 
-                        <form action="/stories/{{id}}" method="post" id="delete-form">
+                        <form action="/stories/{{id}}?_method=DELETE" method="post" id="delete-form">
+                            <input type="hidden" name="_method" value="DELETE">
                             <button type="submit" class="btn red">
                                 <i class="fa fa-remove"></i>Delete</button>
                         </form>
