--- a/views/stories/show.handlebars
+++ b/views/stories/show.handlebars
@@ -27,6 +27,19 @@
                     {{/if}}
                 </div>
             </div>
+            {{#each story.comments}}
+                <div class="card">
+                    <div class="card-content">
+                        <h5>{{comment.body}}</h5>
+                        <div class="chip">
+                        <img src="{{commentUser.image}}">
+                        {{commentUser.firstName}} {{commentUser.lastName}}
+                    </div>
+                    <br>
+                    
+                    </div>
+                </div>
+            {{/each}}
         {{/if}}
     </div>
     <div class="col s12 m3">
