--- a/views/stories/show.handlebars
+++ b/views/stories/show.handlebars
@@ -30,13 +30,13 @@
             {{#each story.comments}}
                 <div class="card">
                     <div class="card-content">
-                        <h5>{{comment.body}}</h5>
+                        <h5>{{commentBody}}</h5>
                         <div class="chip">
                         <img src="{{commentUser.image}}">
                         {{commentUser.firstName}} {{commentUser.lastName}}
                     </div>
                     <br>
-                    
+                    <small>Posted: {{formatDate commentDate 'MMMM Do YYYY'}}</small>
                     </div>
                 </div>
             {{/each}}
