--- a/views/stories/show.handlebars
+++ b/views/stories/show.handlebars
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col s12 m9">
         <h3>{{story.title}}</h3>
+        <small>{{{editIcon story.user.id user.id story.id false}}}</small>
         <div class="card story">
             <div class="card-content">
                 <span class="card-title">{{formatDate story.date 'MMMM Do YYYY'}}</span>
